[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eddlgtm", email = "edward@robopsychology.io" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
