[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eddlgtm", email = "edward@robopsychology.io" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.95.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
